[gd_scene load_steps=7 format=3 uid="uid://cvpbcbc58n77f"]

[ext_resource type="Script" path="res://Bush/bush.gd" id="1_k0tvd"]
[ext_resource type="Texture2D" uid="uid://cv7haw2m1d02f" path="res://Bush/selection.png" id="2_pwn03"]
[ext_resource type="Texture2D" uid="uid://b28mgcu4bne5g" path="res://Bush/berry_bush.png" id="2_qladg"]
[ext_resource type="PackedScene" uid="uid://dhg10hv3sscmi" path="res://Bush/Berry.tscn" id="3_i3r02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ef0"]
size = Vector2(64, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5lho"]
size = Vector2(48, 18)

[node name="StaticBody2D" type="StaticBody2D"]
position = Vector2(112, 64)
script = ExtResource("1_k0tvd")

[node name="Selection" type="Sprite2D" parent="."]
position = Vector2(0, 10.75)
scale = Vector2(1, 1.2619)
texture = ExtResource("2_pwn03")

[node name="Area2D" type="Area2D" parent="."]

[node name="Interatction" type="CollisionShape2D" parent="Area2D" groups=["Targetable"]]
shape = SubResource("RectangleShape2D_m6ef0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_y5lho")
disabled = true

[node name="Bush" type="Sprite2D" parent="."]
texture = ExtResource("2_qladg")

[node name="Berry1" parent="." instance=ExtResource("3_i3r02")]
position = Vector2(24, 0)

[node name="Berry2" parent="." instance=ExtResource("3_i3r02")]
position = Vector2(0, -8)

[node name="Berry3" parent="." instance=ExtResource("3_i3r02")]
position = Vector2(-8, 8)
